--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Git Practice Website</title>
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="components.html">Components</a></li>
-      </ul>
-    </nav>
+    <h1>Welcome to My Git Practice Website</h1>
+    <p>Learning version control one commit at a time 🚀</p>
   </header>
-  <h1>Welcome to My Git Practice Website</h1>
 
   <main>
     <section>
       <h2>About</h2>
       <p>This simple website is made to practice Git commands like <code>add</code>, <code>commit</code>, <code>branch</code>, and <code>merge</code>.</p>
-      <p>Learning version control one commit at a time 🚀</p>
     </section>
 
     <section>
@@ -34,6 +28,6 @@
     <p>Created by You — for Git practice 💻</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
