Added pallets for background color

--- a/components.html
+++ b/components.html
@@ -83,9 +83,24 @@
   </main>
 
   <footer>
+    <div class="color-palette">
+        <button class="color-btn" data-color="#f8d7da" style="background-color:#f8d7da;"></button>
+        <button class="color-btn" data-color="#d4edda" style="background-color:#d4edda;"></button>
+        <button class="color-btn" data-color="#d1ecf1" style="background-color:#d1ecf1;"></button>
+        <button class="color-btn" data-color="#fff3cd" style="background-color:#fff3cd;"></button>
+        <button class="color-btn" data-color="#d0e3ff" style="background-color:#d0e3ff;"></button>
+      </div>
+      <div>
+        <button class="color-btn" data-color="#FFD6A5" style="background-color:#FFD6A5;"></button>
+        <button class="color-btn" data-color="#FFB5A7" style="background-color:#FFB5A7;"></button>
+        <button class="color-btn" data-color="#ffc8f3" style="background-color:#ffc8f3;"></button>
+        <button class="color-btn" data-color="#F8EDEB" style="background-color:#F8EDEB;"></button>
+        <button class="color-btn" data-color="#FEC89A" style="background-color:#FEC89A;"></button>
+      </div>
     <p>Back to <a href="index.html">Home</a></p>
   </footer>
 
   <script src="js/components.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
