--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="components.html">Components</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div id="header-placeholder"></div>
+  
+  
   <h1>Welcome to My Git Practice Website</h1>
 
   <main>
@@ -23,26 +18,9 @@
       <p>This simple website is made to practice Git commands like <code>add</code>, <code>commit</code>, <code>branch</code>, and <code>merge</code>.</p>
       <p>Learning version control one commit at a time 🚀</p>
     </section>
-
   </main>
 
-  <footer>
-    <div class="color-palette">
-        <button class="color-btn" data-color="#f8d7da" style="background-color:#f8d7da;"></button>
-        <button class="color-btn" data-color="#d4edda" style="background-color:#d4edda;"></button>
-        <button class="color-btn" data-color="#d1ecf1" style="background-color:#d1ecf1;"></button>
-        <button class="color-btn" data-color="#fff3cd" style="background-color:#fff3cd;"></button>
-        <button class="color-btn" data-color="#d0e3ff" style="background-color:#d0e3ff;"></button>
-      </div>
-      <div>
-        <button class="color-btn" data-color="#FFD6A5" style="background-color:#FFD6A5;"></button>
-        <button class="color-btn" data-color="#FFB5A7" style="background-color:#FFB5A7;"></button>
-        <button class="color-btn" data-color="#ffc8f3" style="background-color:#ffc8f3;"></button>
-        <button class="color-btn" data-color="#F8EDEB" style="background-color:#F8EDEB;"></button>
-        <button class="color-btn" data-color="#FEC89A" style="background-color:#FEC89A;"></button>
-      </div>
-    <p>Created for You — Git practice 💻</p>
-  </footer>
+  <div id="footer-placeholder"></div>
 
   <script src="js/main.js"></script>
 </body>
